# Solana-Data-ETL-Pipeline

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: SCHEMA.md
src/: analytics.rs  backfill.rs  config.rs  error.rs  events.rs  health.rs  incremental.rs  lib.rs  main.rs  parsers.rs  rpc.rs  warehouse.rs
