[package]
name = "solana-etl"
version = "1.0.0"
edition = "2021"
authors = ["Solana ETL Team"]
description = "Production-grade Solana telemetry & ETL pipeline"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
# For BigQuery, use google-cloud-bigquery crate when implementing

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
base58 = "0.2"

# Rate limiting
governor = "0.6"

# Configuration
config = "0.14"
dotenv = "0.15"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

